[tool.poetry]
name = "saucedemo-robot"
version = "0.1.0"
description = ""
authors = ["Revton Braga <revtonbr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pymarkdownlnt = "^0.9.17"
mdformat = "^0.7.17"
commitizen = "^3.20.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
